--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>Filmes Populares</title>
   </head>
@@ -18,106 +19,20 @@
       <h1>Filmes Populares</h1>
       <div class="search">
         <input type="text" placeholder="Digite algum filme para pesquisar..." />
-        <img src="/assets/search-icon.svg" alt="search-icon" />
+        <img
+          id="icon-favorite"
+          src="/assets/search-icon.svg"
+          alt="search-icon"
+        />
       </div>
       <div class="filter">
         <input type="checkbox" name="checkbox" id="checkbox" />
         <span>Mostrar meus filmes favoritos apenas</span>
       </div>
     </header>
-    <section class="movies">
-      <div class="movie">
-        <div class="movie-image">
-          <img src="/assets/avengers.png" alt="The-avengers" />
-        </div>
-        <div class="movie-text">
-          <p class="title">Avengers Endgame (2019)</p>
-          <div class="icons">
-            <img src="/assets/Star.png" alt="star-icon" /><span>9.2</span>
-            <img src="/assets/Heart.svg" alt="heart-icon" /><span>Favoritar</span>
-          </div>
-          </div>
-        <div class="description">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-            placeat, omnis fugiat deleniti error excepturi, amet veniam debitis
-            aliquam itaque ea, nemo ipsam ducimus cum laboriosam nesciunt. Vel,
-            saepe tempore! Lorem, ipsum dolor sit amet consectetur adipisicing
-            elit. Unde totam animi ut vero? Magnam voluptatem quis accusamus
-            corrupti soluta, et ipsam voluptate fugit. Itaque repellendus
-            dignissimos modi architecto, explicabo aliquid.
-          </p>
-        </div>
-      </div>
-      <div class="movie">
-        <div class="movie-image">
-          <img src="/assets/avengers.png" alt="The-avengers" />
-        </div>
-        <div class="movie-text">
-          <p class="title">Avengers Endgame (2019)</p>
-          <div class="icons">
-            <img src="/assets/Star.png" alt="star-icon" /><span>9.2</span>
-            <img src="/assets/Heart.svg" alt="heart-icon" /><span>Favoritar</span>
-          </div>
-          </div>
-        <div class="description">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-            placeat, omnis fugiat deleniti error excepturi, amet veniam debitis
-            aliquam itaque ea, nemo ipsam ducimus cum laboriosam nesciunt. Vel,
-            saepe tempore! Lorem, ipsum dolor sit amet consectetur adipisicing
-            elit. Unde totam animi ut vero? Magnam voluptatem quis accusamus
-            corrupti soluta, et ipsam voluptate fugit. Itaque repellendus
-            dignissimos modi architecto, explicabo aliquid.
-          </p>
-        </div>
-      </div>
-      <div class="movie">
-        <div class="movie-image">
-          <img src="/assets/avengers.png" alt="The-avengers" />
-        </div>
-        <div class="movie-text">
-          <p class="title">Avengers Endgame (2019)</p>
-          <div class="icons">
-            <img src="/assets/Star.png" alt="star-icon" /><span>9.2</span>
-            <img src="/assets/Vector.svg" alt="heart-icon" /><span>Favoritar</span>
-          </div>
-          </div>
-        <div class="description">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-            placeat, omnis fugiat deleniti error excepturi, amet veniam debitis
-            aliquam itaque ea, nemo ipsam ducimus cum laboriosam nesciunt. Vel,
-            saepe tempore! Lorem, ipsum dolor sit amet consectetur adipisicing
-            elit. Unde totam animi ut vero? Magnam voluptatem quis accusamus
-            corrupti soluta, et ipsam voluptate fugit. Itaque repellendus
-            dignissimos modi architecto, explicabo aliquid.
-          </p>
-        </div>
-      </div>
-      <div class="movie">
-        <div class="movie-image">
-          <img src="/assets/avengers.png" alt="The-avengers" />
-        </div>
-        <div class="movie-text">
-          <p class="title">Avengers Endgame (2019)</p>
-          <div class="icons">
-            <img src="/assets/Star.png" alt="star-icon" /><span>9.2</span>
-            <img src="/assets/Heart.svg" alt="heart-icon" /><span>Favoritar</span>
-          </div>
-          </div>
-        <div class="description">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-            placeat, omnis fugiat deleniti error excepturi, amet veniam debitis
-            aliquam itaque ea, nemo ipsam ducimus cum laboriosam nesciunt. Vel,
-            saepe tempore! Lorem, ipsum dolor sit amet consectetur adipisicing
-            elit. Unde totam animi ut vero? Magnam voluptatem quis accusamus
-            corrupti soluta, et ipsam voluptate fugit. Itaque repellendus
-            dignissimos modi architecto, explicabo aliquid.
-          </p>
-        </div>
-      </div>
+    <section id="movies">
+     
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
