--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="search">
         <input type="text" placeholder="Digite algum filme para pesquisar..." />
         <img
-          id="icon-favorite"
+          id="icon-search"
           src="/assets/search-icon.svg"
           alt="search-icon"
         />
@@ -30,9 +30,7 @@
         <span>Mostrar meus filmes favoritos apenas</span>
       </div>
     </header>
-    <section id="movies">
-     
-    </section>
-    <script src="index.js"></script>
+    <section id="movies"></section>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
