--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>Filmes Populares</title>
   </head>
   <body>
@@ -31,6 +31,6 @@
       </div>
     </header>
     <section id="movies"></section>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
