--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Filmes Populares</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
         <input type="text" placeholder="Digite algum filme para pesquisar..." />
         <img
           id="icon-search"
-          src="/assets/search-icon.svg"
+          src="./assets/search-icon.svg"
           alt="search-icon"
         />
       </div>
@@ -31,6 +31,6 @@
       </div>
     </header>
     <section id="movies"></section>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
